# PacketAnalyzer

./: README.md
backend/: package.json  server.js
backend/config/: blocking_rules.txt  firewall_rules.json
backend/controllers/: firewallController.js  scanController.js
backend/routes/: firewallRoutes.js  scanRoutes.js
backend/services/: dpiService.js  ruleFileGenerator.js
backend/utils/: reportParser.js
cpp-engine/: .gitignore  CMakeLists.txt
cpp-engine/src/: dpi_engine.cpp  load_balancer.cpp  main.cpp  main_dpi.cpp
frontend/: .gitignore  package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/components/: ApplicationChart.jsx  DashboardPanel.jsx  FileUpload.jsx  LoadingOverlay.jsx  Navbar.jsx  ProtocolPieChart.jsx  StatCard.jsx  TrafficSummary.jsx
frontend/src/pages/: About.jsx  Dashboard.jsx  EngineLogs.jsx  FirewallRules.jsx
frontend/src/services/: api.js  firewallApi.js
